--- a/packages/site/src/app.css
+++ b/packages/site/src/app.css
@@ -72,7 +72,23 @@
 	* {
 		@apply border-border;
 	}
+
 	body {
 		@apply bg-background text-foreground;
+		font-synthesis-weight: none;
+		text-rendering: optimizeLegibility;
+	}
+
+	/* Font face Geist font */
+	@font-face {
+		font-family: 'geist-sans';
+		src: url('fonts/Geist/geist.woff2') format('woff2');
+		font-display: swap;
+	}
+
+	/* Mobile tap highlight */
+	/* https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-tap-highlight-color */
+	html {
+		-webkit-tap-highlight-color: rgba(128, 128, 128, 0.5);
 	}
 }
